@@ -1,3 +1,9 @@
+Tue Oct 16 09:30:30 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/ruby/test_regexp.rb
+	  (TextRegexp#test_raw_hyphen_and_tk_char_type_after_range): ignoring
+	  warnings are already set in setup method.
+
 Tue Oct 16 06:44:06 2012  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_insnhelper.c (VM_CALLEE_SETUP_ARG): fix wrong condition.
